README file updated